fix QR clipping on label

--- a/src/index.css
+++ b/src/index.css
@@ -103,7 +103,7 @@ body::before {
 
 .qr-label-print__qr {
   position: absolute;
-  left: -2mm;
+  left: 3mm;
   top: 1.6mm;
   width: 12mm;
   height: 12mm;
